# embedded-lcd

./: .gitignore  Cargo.toml
.cargo/: config.toml
examples/: esp32.rs  lcd-test.rs
examples/esp32/: Cargo.toml  diagram.json  wokwi.toml
examples/esp32/.cargo/: config.toml
examples/esp32/src/: main.rs
examples/i2c/: Cargo.toml  diagram.json
examples/i2c/.cargo/: config.toml
examples/parallel_4bit/: Cargo.toml  diagram.json  wokwi.toml
examples/parallel_8bit/: Cargo.toml  diagram.json  wokwi.toml
src/: async_output_pin.rs  display.rs  interfaces.rs  lib.rs
src/interfaces/: i2c.rs  parallel_eight_bits.rs  parallel_four_bits.rs
