[package]
name = "lcd1602"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = { version = "0.2.7" }

[dev-dependencies]
esp32-hal = { version = "0.18.0", features = ["xtal-40mhz"] }
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
pcf857x = { version = "*" }

[[example]]
name = "esp32"